--- a/.github/workflows/java-ci-cd.yml
+++ b/.github/workflows/java-ci-cd.yml
@@ -33,7 +33,7 @@ jobs:
 
     env:
       AWS_REGION: eu-north-1                  # set this to your preferred AWS region, e.g. us-west-1
-      ECR_REPOSITORY: java-app                  # set this to your Amazon ECR repository name
+      ECR_REPOSITORY: java-app-ecr                  # set this to your Amazon ECR repository name
       ECS_SERVICE: javaAppService                 # set this to your Amazon ECS service name
       ECS_CLUSTER: javaAppCluster                 # set this to your Amazon ECS cluster name
       ECS_TASK_DEFINITION: .aws/task-definition.json # set this to the path to your Amazon ECS task definition
